
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------
	
master	UNRELEASED

	2021-07-22
	* Add note to SIGXFSZ crashes to doc/bogofilter-faq.html and 
	  doc/integrating-with-postfix.

	2020-05-07
	* Merge remaining fixes for sf.net Bug #116
	  <https://sourceforge.net/p/bogofilter/bugs/116/>
	  that were courtesy of Doran Moppert. The original bug
	  had been fixed independently in 2015, but Doran's analysis
	  and fixes extended beyond that, and the remaining cleanups
	  and fixes are worth having.  Thanks.  (Git merge 1b4812ba).
	* Fix sf.net Bug #115, by adding @ to the list of characters
	  permitted in MIME boundaries.  Not permitted per RFC2046,
	  but seen in the wild.
	  <https://sourceforge.net/p/bogofilter/bugs/115/>

	2020-04-30
	* Fix Debian Bug#524758, which crashes bogofilter with -R
	  option if either no spam or no ham have been registered.
	* Remove the trio library from the distribution.

1.2.5	2019-10-11
	* Release bogofilter 1.2.5.

1.2.5.RC1
	2019-09-08
	* Release candidate #1 for bogofilter 1.2.5.
	* Add a file "OBITUARY" to inform the bogofilter community
	  that and how David M. Relson has passed away in 2013.
	* Matthias Andree has been maintainer since.

	2019-08-04
	* Const-ness fix initiated for KyotoCabinet driver (fixing a const
	  qualifier warning there) also improves performance in some
	  "full-database" operations for LMDB and SQLite3, through reduced
	  memory allocation and copy operations.

	2019-06-21
	* Plugged more memory leaks (one-shot leaks in bogoutil/bogotune).
	* RPMs or scripts for static library builds have been removed.
	  Bogofilter no longer supports systems that are too far out of date.